external-crates/move/crates/move-compiler/tests/development/enums/parser/match.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/parser/match.move:2:17
  │
2 │     public enum Temperature {
  │                 ^^^^^^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/parser/match.move:23:17
   │
23 │     public enum Option<T> {
   │                 ^^^^^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/parser/match.move:58:17
   │
58 │     public enum Expression has drop {
   │                 ^^^^^^^^^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

